@@ -1,24 +1,24 @@
-#ifndef _PRINTUTILS_H_
-#define _PRINTUTILS_H_
+#ifndef _PRINTING_H_
+#define _PRINTING_H_
 
 #include <pthread/pthread.h>
 
-extern char *MESSAGE_BUFFER;
-extern char *EXCEPTION_BUFFER;
-extern char *ERROR_BUFFER;
+extern char *ERROR_BUFFER, *EXCEPTION_BUFFER, *MESSAGE_BUFFER;
 
-void *message_buffer_thread(void *);
-void *exception_buffer_thread(void *);
 void *error_buffer_thread(void *);
+void *exception_buffer_thread(void *);
+void *message_buffer_thread(void *);
+
+void WriteErrorBuffer(const char *, ...);
 void WriteExceptionBuffer(const char *, ...);
 void WriteMessageBuffer(const char *, ...);
-void WriteErrorBuffer(const char *, ...);
+
+void PrintErrorBuffer(void);
 void PrintExceptionBuffer(void);
 void PrintMessageBuffer(void);
-void PrintErrorBuffer(void);
+
+void ClearErrorBuffer(void);
 void ClearExceptionBuffer(void);
 void ClearMessageBuffer(void);
-void ClearErrorBuffer(void);
-void safe_reprompt(void);
 
 #endif
